[gd_scene load_steps=15 format=2]

[ext_resource path="res://UI/Buttons/MenusBox_34x34.png" type="Texture" id=2]
[ext_resource path="res://Assets/Towers/archer_tower/3 Units/1/D_Preattack.png" type="Texture" id=3]
[ext_resource path="res://Assets/Towers/mage_tower/Lvl1/Unit/Idle/Down/idle_mage_lvl_1_down1.png" type="Texture" id=4]
[ext_resource path="res://Scenes/MainScenes/GameScene.gd" type="Script" id=5]
[ext_resource path="res://Scenes/MainScenes/UI.gd" type="Script" id=6]
[ext_resource path="res://UI/Buttons/fastForward.png" type="Texture" id=8]
[ext_resource path="res://UI/Art/HPbar.jpg" type="Texture" id=10]
[ext_resource path="res://Fonts/Kenney Mini Square.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Kenney Mini Square.ttf"

[sub_resource type="DynamicFont" id=2]
size = 22
outline_color = Color( 0.964706, 0, 0, 1 )
extra_spacing_bottom = 10
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 39
outline_color = Color( 0.964706, 0, 0, 1 )
extra_spacing_bottom = 10
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_color = Color( 0.964706, 0, 0, 1 )
extra_spacing_bottom = 10
font_data = ExtResource( 11 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Fonts/Kenney Mini Square.ttf"

[sub_resource type="DynamicFont" id=6]
size = 21
outline_color = Color( 0.964706, 0, 0, 1 )
extra_spacing_bottom = 10
font_data = SubResource( 5 )

[node name="GameScene" type="Node2D"]
script = ExtResource( 5 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 6 )

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.348267
margin_bottom = 0.348267
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildBar" type="VBoxContainer" parent="UI/HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -400.0
margin_right = 100.0
rect_min_size = Vector2( 100, 400 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostArcher" type="Label" parent="UI/HUD/BuildBar"]
margin_right = 100.0
margin_bottom = 14.0
text = "Cost : 150"

[node name="archer_tower" type="TextureButton" parent="UI/HUD/BuildBar" groups=[
"build_buttons",
]]
margin_left = 10.0
margin_top = 18.0
margin_right = 90.0
margin_bottom = 98.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/archer_tower"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.05106
margin_right = -27.0
margin_bottom = -23.9489
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CostMage" type="Label" parent="UI/HUD/BuildBar"]
margin_top = 102.0
margin_right = 100.0
margin_bottom = 116.0
text = "Cost : 250"

[node name="mage_tower" type="TextureButton" parent="UI/HUD/BuildBar" groups=[
"build_buttons",
]]
margin_left = 10.0
margin_top = 120.0
margin_right = 90.0
margin_bottom = 200.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/mage_tower"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.6634
margin_top = 11.7348
margin_right = -16.3366
margin_bottom = -17.2652
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameControl" type="HBoxContainer" parent="UI/HUD"]
anchor_left = 0.781
anchor_top = 0.903
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.319946
margin_top = -0.160034
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedUp" type="TextureButton" parent="UI/HUD/GameControl"]
margin_right = 70.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 8 )
expand = true

[node name="PausePlay" type="Button" parent="UI/HUD/GameControl"]
pause_mode = 2
margin_left = 74.0
margin_right = 276.0
margin_bottom = 70.0
rect_min_size = Vector2( 70, 70 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
toggle_mode = true
text = "Start Next Wave"

[node name="InfoBar" type="ColorRect" parent="UI/HUD"]
self_modulate = Color( 0, 0, 0, 0.470588 )
anchor_right = 1.0
rect_min_size = Vector2( 0, 60 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H" type="HBoxContainer" parent="UI/HUD/InfoBar"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Symbol2" type="Label" parent="UI/HUD/InfoBar/H"]
margin_right = 120.0
margin_bottom = 60.0
rect_min_size = Vector2( 120, 60 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0.705882, 0.105882, 0.105882, 1 )
text = "$"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 124.0
margin_right = 229.0
margin_bottom = 60.0
rect_min_size = Vector2( 105, 60 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.705882, 0.105882, 0.105882, 1 )
text = "150"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control2" type="Control" parent="UI/HUD/InfoBar/H"]
margin_left = 233.0
margin_right = 333.0
margin_bottom = 60.0
rect_min_size = Vector2( 100, 0 )

[node name="WaveNumber" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 337.0
margin_top = 11.0
margin_right = 337.0
margin_bottom = 48.0
custom_fonts/font = SubResource( 6 )

[node name="Icon" type="TextureRect" parent="UI/HUD/InfoBar/H"]
margin_left = 742.0
margin_right = 802.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
size_flags_horizontal = 10
expand = true

[node name="HP" type="TextureProgress" parent="UI/HUD/InfoBar/H"]
margin_left = 806.0
margin_top = 15.0
margin_right = 1206.0
margin_bottom = 45.0
rect_min_size = Vector2( 400, 30 )
size_flags_horizontal = 5
size_flags_vertical = 4
value = 100.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 10 )
tint_under = Color( 0.215686, 0.215686, 0.215686, 1 )
tint_progress = Color( 0.223529, 0.882353, 0.0431373, 1 )
nine_patch_stretch = true

[node name="Tween" type="Tween" parent="UI/HUD/InfoBar/H/HP"]

[node name="Control" type="Control" parent="UI/HUD/InfoBar/H"]
margin_left = 1210.0
margin_right = 1280.0
margin_bottom = 60.0
rect_min_size = Vector2( 70, 0 )

[connection signal="pressed" from="UI/HUD/GameControl/SpeedUp" to="UI" method="_on_SpeedUp_pressed"]
[connection signal="pressed" from="UI/HUD/GameControl/PausePlay" to="UI" method="_on_PausePlay_pressed"]
